--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "argon2": "^0.44.0",
     "cors": "^2.8.5",
     "docx": "^9.5.1",
     "express": "^5.1.0",
